--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Tic Tac Toe</h1>
+    <h1 style="font-size: 100px; margin: 80px;" >Tic Tac Toe</h1>
     <div class="index">
         <div class="home">
             <a href="index3x3.html">
-                <button class="matrix">3x3</button>
+                <button class="matrix"style="margin: 10px;">3x3</button>
             </a>
             <a href="index5x5.html">
-                <button class="matrix">5x5</button>
+                <button class="matrix"style="margin: 10px;">5x5</button>
             </a>
             
            
